# fastapi_model

./: .coverage  .env  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  deploy.yaml  deploy.yml  lint_and_test_on_push.yaml  lint_on_push.yaml
app/: database.py  main.py  model.pkl  model_predict.py  model_train.py  models.py  schemas.py
assets/materials/: add_database.md  ci_intro.md  docker.md
tests/: test_main.py  test_model.py
