[tool.poetry]
name = "fastapi-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
scikit-learn = "^1.3.1"
flake8 = "^6.1.0"
pylint = "^3.0.1"
make = "^0.1.6.post2"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
sqlalchemy = "^2.0.22"
httpx = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[virtualenvs]
create = true
in-project = true
